--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<a href="https://www.zomato.com/pune/">Home</a>
+			<a href='https://www.bing.com/s/'>About us</a>
+			<a href="https://blog.hubspot.com/service/best-contact-us-page/">Contact us</a>
+		</ul>
+	</nav>
+	<h1>3 images
+		<img src="https://picsum.photos/id/123/200/300" alt="image1">
+		<img src="https://picsum.photos/id/124/200/300" alt="image2">
+		<img src="https://picsum.photos/id/125/200/300" alt="image3">
+	</h1>
     <script type="text/javascript" src="./script.js">
 </script>
 
